# channel_plus

./: .gitignore  README.md  README.org  channel_plus  channel_plus.ex  implement-plan.md  main.py  mix.exs  pyproject.toml  test_auth.py
config/: config.exs
dev/: demo_resume.py  test_resume.py  test_website.py
lib/: channel_plus.ex
src/channel_plus/: __init__.py  main.py
src/channel_plus/core/: __init__.py  config.py  downloader.py  models.py  scraper.py
src/channel_plus/utils/: __init__.py  http_client.py
test/: scraping_test.exs
tests/: __init__.py  test_integration.py  test_models.py  test_scraper.py
